--- a/src/app/shared/components/product-form/product-form.component.html
+++ b/src/app/shared/components/product-form/product-form.component.html
@@ -34,13 +34,13 @@
     <input matInput placeholder="Precio" formControlName="price" />
   </mat-form-field>
 
-  <mat-form-field class="stock">
+  <!-- <mat-form-field class="stock">
     <input matInput placeholder="Stock Actual" formControlName="stock" />
-  </mat-form-field>
+  </mat-form-field> -->
 
-  <mat-form-field class="cStock">
+  <!-- <mat-form-field class="cStock">
     <input matInput placeholder="Stock crítico" formControlName="criticalStock" />
-  </mat-form-field>
+  </mat-form-field> -->
 
   <mat-form-field class="desc">
     <textarea matInput placeholder="Descripción" formControlName="description"></textarea>
