--- a/src/app/management/routes/products/product-manager.component.html
+++ b/src/app/management/routes/products/product-manager.component.html
@@ -31,7 +31,7 @@
           ${{ product.price }}
         </td>
       </ng-container>
-      <ng-container matColumnDef="currentStock">
+      <!-- <ng-container matColumnDef="currentStock">
         <th mat-header-cell *matHeaderCellDef> Stock Actual </th>
         <td mat-cell *matCellDef="let product">
           {{ product.currentStock }}
@@ -42,11 +42,11 @@
         <td mat-cell *matCellDef="let product">
           {{ product.criticalStock }}
         </td>
-      </ng-container>
-      <ng-container matColumnDef="type">
+      </ng-container> -->
+      <ng-container matColumnDef="category">
         <th mat-header-cell *matHeaderCellDef> Tipo </th>
         <td mat-cell *matCellDef="let product">
-          {{ product.productType.name }}
+          {{ product.category.name }}
         </td>
       </ng-container>
       <ng-container matColumnDef="actions">
