--- a/src/app/shared/components/sell-form/sell-form.component.html
+++ b/src/app/shared/components/sell-form/sell-form.component.html
@@ -11,8 +11,8 @@
     <input matInput placeholder="Fecha" [ngModel]="sellDate" [ngModelOptions]="{ standalone: true }" disabled />
   </mat-form-field>
 
-  <mat-form-field style="grid-area: type">
-    <mat-select placeholder="Tipo de Venta" formControlName="type">
+  <mat-form-field style="grid-area: billingType">
+    <mat-select placeholder="Tipo de Venta" formControlName="billingType">
       <mat-option *ngFor="let b of (billingTypes$ | async)" [value]="b.id">
         {{ b.description }}
       </mat-option>
