--- a/src/app/management/routes/sales/sell-manager.component.html
+++ b/src/app/management/routes/sales/sell-manager.component.html
@@ -16,13 +16,25 @@
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> No. </th>
         <td mat-cell *matCellDef="let sell">
-          {{ sell.id }}
+          {{ sell.buyOrder }}
         </td>
       </ng-container>
       <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef> Fecha </th>
         <td mat-cell *matCellDef="let sell">
-          {{ sell.soldOn }}
+          {{ sell.date }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="customerName">
+        <th mat-header-cell *matHeaderCellDef> Cliente </th>
+        <td mat-cell *matCellDef="let sell">
+          {{ sell.customer.person.name }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef> Estado </th>
+        <td mat-cell *matCellDef="let sell">
+          {{ sell.status }}
         </td>
       </ng-container>
       <ng-container matColumnDef="actions">
