--- a/src/app/store/dialogs/login-form/store-login-form-dialog.component.html
+++ b/src/app/store/dialogs/login-form/store-login-form-dialog.component.html
@@ -46,10 +46,10 @@
         </button>
       </div>
     </form>
-    <div class="other actions">
+    <!-- <div class="other actions">
       <app-dialog-switcher-button #registerButton
         label="¿No tienes una cuenta? Regístrate aquí">
       </app-dialog-switcher-button>
-    </div>
+    </div> -->
   </div>
 </div>
