--- a/src/app/store/routes/cart-review/store-cart-review.component.html
+++ b/src/app/store/routes/cart-review/store-cart-review.component.html
@@ -61,7 +61,7 @@
 
   <h3 class="summary">Resumen de tu Compra</h3>
   <div class="summary">
-    <div>Subtotal: ${{ cartSubtotalValue$ | async }}</div>
+    <div>Subtotal: ${{ cartNetValue$ | async }}</div>
     <div>Total: ${{ cartTotalValue$ | async }} (IVA incl.)</div>
     <button mat-button mat-raised-button type="button"
       color="primary"
