--- a/src/app/shared/dialogs/edit-profile-form-dialog/edit-profile-form-dialog.component.html
+++ b/src/app/shared/dialogs/edit-profile-form-dialog/edit-profile-form-dialog.component.html
@@ -7,8 +7,8 @@
 
 <div class="dialog">
   <h2 mat-dialog-title>Editar Perfil</h2>
-  <centered-mat-spinner *ngIf="saving$ | async">
-  </centered-mat-spinner>
+  <app-centered-mat-spinner *ngIf="saving$ | async">
+  </app-centered-mat-spinner>
 
   <form [formGroup]="formGroup">
     <app-person-form formControlName="person">
