--- a/src/app/store/dialogs/company-details/store-company-details-dialog.component.html
+++ b/src/app/store/dialogs/company-details/store-company-details-dialog.component.html
@@ -6,7 +6,7 @@
 -->
 
 <div class="loading" *ngIf="loading$ | async">
-  <centered-mat-spinner></centered-mat-spinner>
+  <app-centered-mat-spinner></app-centered-mat-spinner>
 </div>
 <div class="dialog" *ngIf="data$ |async">
   <div class="banner">
