--- a/src/app/store/dialogs/guest-shipping-form/store-guest-shipping-form-dialog.component.html
+++ b/src/app/store/dialogs/guest-shipping-form/store-guest-shipping-form-dialog.component.html
@@ -7,8 +7,8 @@
 
 <div class="dialog">
   <h2>Registro de Cliente</h2>
-  <centered-mat-spinner *ngIf="saving$ | async">
-  </centered-mat-spinner>
+  <app-centered-mat-spinner *ngIf="saving$ | async">
+  </app-centered-mat-spinner>
 
   <div [hidden]="saving$ | async">
     <form [formGroup]="formGroup" (submit)="onSubmit()">
