--- a/src/app/store/dialogs/payment-redirect-prompt/store-payment-redirect-prompt-dialog.component.html
+++ b/src/app/store/dialogs/payment-redirect-prompt/store-payment-redirect-prompt-dialog.component.html
@@ -6,8 +6,8 @@
 -->
 
 <div class="dialog">
-  <centered-mat-spinner *ngIf="loading$ | async">
-  </centered-mat-spinner>
+  <app-centered-mat-spinner *ngIf="loading$ | async">
+  </app-centered-mat-spinner>
 
   <div [hidden]="loading$ | async">
     <ng-container *ngIf="error$ | async; else noError">
