--- a/src/app/store/routes/catalog/store-catalog.component.html
+++ b/src/app/store/routes/catalog/store-catalog.component.html
@@ -11,8 +11,8 @@
     (filtersChanges)="onFiltersChange($event)">
   </app-product-filters-panel>
 
-  <centered-mat-spinner *ngIf="loading$ | async">
-  </centered-mat-spinner>
+  <app-centered-mat-spinner *ngIf="loading$ | async">
+  </app-centered-mat-spinner>
 
   <div class="products" [hidden]="loading$ | async">
     <app-store-product-card *ngFor="let product of (products$ | async)"
