fix various css-related issues
remove old color palettes, just use material theming
renew css selectors for theme color mixins
remove redundant div wrappers for various components
keep those div wrappers styles using :host css selectors
various minor visibility issues fixed

--- a/src/app/management/components/data-actions/management-data-actions.component.css
+++ b/src/app/management/components/data-actions/management-data-actions.component.css
@@ -5,13 +5,13 @@
  * https://opensource.org/licenses/MIT
  */
 
-.data-actions {
+:host {
   display: grid;
   justify-content: center;
   padding: 0.5rem 0;
 }
-@media(min-width: 800px) {
-  .data-actions {
+@media(min-width: 641px) {
+  :host {
     justify-content: flex-end;
     padding: 0.5rem;
   }
