--- a/src/app/management/management.component.css
+++ b/src/app/management/management.component.css
@@ -5,14 +5,14 @@
  * https://opensource.org/licenses/MIT
  */
 
-.management {
+:host {
   height: 100%;
   display: flex;
   flex-flow: column nowrap;
 }
 
 app-management-header {
-  flex: 0 0 5.5rem;
+  flex: 0 0 auto;
 }
 
 mat-sidenav-container {
@@ -20,8 +20,7 @@ mat-sidenav-container {
 }
 
 mat-sidenav {
-  border-right: none;
-  width: 13rem;
+  width: 15rem;
 }
 
 .content {
