--- a/src/app/store/components/header/menu/store-header-menu.component.css
+++ b/src/app/store/components/header/menu/store-header-menu.component.css
@@ -5,20 +5,24 @@
  * https://opensource.org/licenses/MIT
  */
 
- .open-menu {
+:host {
+  display: flex;
+}
+
+.open-menu {
   justify-content: center;
   align-items: center;
   padding: 0;
 }
-.open-menu mat-icon {
-  width: 3rem;
-  height: 3rem;
-  font-size: 3rem;
-}
-
 .open-menu.active {
   border-top-width: 1px;
   border-top-style: solid;
   border-bottom-width: 1px;
   border-bottom-style: solid;
+}
+
+.open-menu mat-icon {
+  width: 3rem;
+  height: 3rem;
+  font-size: 3rem;
 }
