--- a/src/app/management/components/sidenav/management-sidenav.component.css
+++ b/src/app/management/components/sidenav/management-sidenav.component.css
@@ -5,42 +5,37 @@
  * https://opensource.org/licenses/MIT
  */
 
-.sidenav {
-  height: 100%;
-  background-color: var(--color-bg);
+:host {
+  display: block;
 }
 
 mat-nav-list {
   padding: 0;
 }
 
-mat-nav-list * {
-  color: var(--color-content);
-}
-
-mat-nav-list a {
-  padding: 1rem 0.75rem 1rem 0;
+a.mat-list-item {
+  height: 5rem;
   font-size: 1.2rem;
 }
 
-a mat-icon {
+a.mat-list-item mat-icon {
   font-size: 2rem;
   width: 2rem;
   height: 2rem;
   margin-right: 0.5em;
 }
-@media(min-width: 800px) {
-  mat-nav-list a {
+@media(min-width: 641px) {
+  a.mat-list-item {
     font-size: 1.25rem;
   }
 
-  a mat-icon {
+  a.mat-list-item mat-icon {
     font-size: 2.5rem;
     width: 2.5rem;
     height: 2.5rem;
   }
 }
 
-a.active {
+a.mat-list-item.active {
   background-color: rgba(0,0,0,0.2);
 }
