--- a/src/app/management/routes/images/image-manager.component.html
+++ b/src/app/management/routes/images/image-manager.component.html
@@ -5,10 +5,8 @@
   https://opensource.org/licenses/MIT
 -->
 
-<div class="loading" *ngIf="loading$ | async">
-  <app-centered-mat-spinner>
-  </app-centered-mat-spinner>
-</div>
+<app-centered-mat-spinner *ngIf="loading$ | async">
+</app-centered-mat-spinner>
 <div class="data-manager" [hidden]="loading$ | async">
   <div class="table-wrapper">
 
