--- a/src/app/shared/components/file-upload/file-upload.component.css
+++ b/src/app/shared/components/file-upload/file-upload.component.css
@@ -5,10 +5,10 @@
  * https://opensource.org/licenses/MIT
  */
 
-.file-upload {
+:host {
   display: flex;
 }
-.file-upload,
+:host,
 textarea {
   cursor: pointer;
 }
