--- a/src/app/store/components/footer/store-footer.component.css
+++ b/src/app/store/components/footer/store-footer.component.css
@@ -5,10 +5,9 @@
  * https://opensource.org/licenses/MIT
  */
 
- .footer {
+:host {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0.5em 0;
-  border-top: 1px #e0e0e06b solid;
 }
