--- a/src/app/store/components/header/login-button/store-header-login-button.component.css
+++ b/src/app/store/components/header/login-button/store-header-login-button.component.css
@@ -5,18 +5,22 @@
  * https://opensource.org/licenses/MIT
  */
 
- button {
-  padding: 0;
-}
-button mat-icon {
-  width: 3rem;
-  height: 3rem;
-  font-size: 3rem;
+:host {
+  display: flex;
 }
 
+button {
+  padding: 0;
+}
 button.active {
   border-top-width: 1px;
   border-top-style: solid;
   border-bottom-width: 1px;
   border-bottom-style: solid;
+}
+
+button mat-icon {
+  width: 3rem;
+  height: 3rem;
+  font-size: 3rem;
 }
