--- a/src/app/store/components/header/store-header.component.css
+++ b/src/app/store/components/header/store-header.component.css
@@ -5,17 +5,11 @@
  * https://opensource.org/licenses/MIT
  */
 
-.header {
-  height: 100%;
+:host {
+  position: relative;
   display: flex;
   flex-flow: row nowrap;
   align-items: stretch;
-  border-bottom: 1px solid var(--color-content);
-}
-
-.header>* {
-  display: inline-flex;
-  flex-flow: row nowrap;
 }
 
 app-store-header-brand {
