--- a/src/app/store/dialogs/product-details/store-product-details-dialog.component.css
+++ b/src/app/store/dialogs/product-details/store-product-details-dialog.component.css
@@ -5,7 +5,7 @@
  * https://opensource.org/licenses/MIT
  */
 
-.dialog {
+:host {
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
@@ -26,7 +26,7 @@ img {
   text-align: center;
   margin: 0.25rem 0;
 }
-@media(min-width: 800px) {
+@media(min-width: 641px) {
   .about {
     text-align: initial;
     margin: 0.5rem 0;
@@ -45,7 +45,7 @@ img {
   flex-flow: column nowrap;
   align-items: center;
 }
-@media(min-width: 800px) {
+@media(min-width: 641px) {
   .actions {
     flex-flow: row nowrap;
   }
@@ -56,7 +56,7 @@ img {
   color: #558b2f;
   margin: 0 auto;
 }
-@media(min-width: 800px) {
+@media(min-width: 641px) {
   .price {
     font-size: 1.75rem;
     margin: 0 auto 0 0.5rem;
