--- a/src/assets/mixins/store-cart-review.component.scss
+++ b/src/assets/mixins/store-cart-review.component.scss
@@ -12,24 +12,14 @@
   $primary: map-get($config, primary);
   $accent: map-get($config, accent);
 
-  // .cart-review {
-  //   background-color: mat-color($primary, 50);
-  // }
-
-  .cart-review h2,
-  .cart-review h3 {
-    background-color: mat-color($primary, 50);
+  app-store-cart-review h2,
+  app-store-cart-review h3 {
     color: mat-color($primary);
-  }
-
-  .cart-review div.summary {
-    background-color: mat-color($primary, 50);
   }
 }
 
 @mixin store-cart-review-theme($theme) {
   $color: mat-get-color-config($theme);
-  // $typography: mat-get-typography-config($theme);
 
   @if $color != null {
     @include store-cart-review-color($color);
