update some more unit tests

--- a/src/app/store/dialogs/product-details/store-product-details-dialog.component.html
+++ b/src/app/store/dialogs/product-details/store-product-details-dialog.component.html
@@ -5,7 +5,8 @@
   https://opensource.org/licenses/MIT
 -->
 
-<app-slideshow [images]="product?.images"
+<app-slideshow
+  [images]="product?.images"
   [autocycle]="false">
 </app-slideshow>
 <div class="about">
