move app title string constant to environment
remove app constants file
use only one title for all screens; don't keep a "responsive title"

--- a/src/app/management/components/header/management-header.component.html
+++ b/src/app/management/components/header/management-header.component.html
@@ -13,8 +13,7 @@
   <mat-icon>menu</mat-icon>
 </button>
 <div class="logo">
-  <h1 class="desktop">{{ desktopTitle }}</h1>
-  <h1 class="mobile">{{ mobileTitle }}</h1>
+  <h1>{{ appTitle }}</h1>
 </div>
 <div class="middle">
   <span>{{ moduleName$ | async }}</span>
