--- a/src/app/store/components/header/brand/store-header-brand.component.html
+++ b/src/app/store/components/header/brand/store-header-brand.component.html
@@ -6,6 +6,5 @@
 -->
 
 <div class="logo" (click)="onClickViewCompanyDetails()">
-  <h1 class="desktop">{{ desktopTitle }}</h1>
-  <h1 class="mobile">{{ mobileTitle }}</h1>
+  <h1>{{ appTitle }}</h1>
 </div>
