--- a/src/app/store/dialogs/registration-form/store-registration-form-dialog.component.html
+++ b/src/app/store/dialogs/registration-form/store-registration-form-dialog.component.html
@@ -5,27 +5,27 @@
   https://opensource.org/licenses/MIT
 -->
 
-<h2 mat-dialog-title>Registro de Cliente</h2>
+<h2 mat-dialog-title>Nueva Cuenta de Usuario</h2>
 <app-centered-mat-spinner *ngIf="registering$ | async">
 </app-centered-mat-spinner>
 <div [hidden]="registering$ | async">
   <form [formGroup]="formGroup" (submit)="onSubmit()">
-    <mat-form-field style="grid-area: name">
+    <mat-form-field class="name">
       <input matInput placeholder="Nombre de Usuario" formControlName="name" />
     </mat-form-field>
 
-    <mat-form-field style="grid-area: pass1">
+    <mat-form-field class="pass1">
       <input matInput placeholder="Clave de Usuario" formControlName="pass1" type="password" />
     </mat-form-field>
 
-    <mat-form-field style="grid-area: pass2">
+    <mat-form-field class="pass2">
       <input matInput placeholder="Repetir Clave" formControlName="pass2" type="password" />
     </mat-form-field>
 
-    <app-person-form #personForm style="grid-area: person">
+    <app-person-form #personForm>
     </app-person-form>
 
-    <div>
+    <div class="actions">
       <button mat-button mat-raised-button type="submit"
         color="primary"
         [disabled]="formGroup.invalid">
