--- a/src/app/store/dialogs/guest-shipping-form/store-guest-shipping-form-dialog.component.css
+++ b/src/app/store/dialogs/guest-shipping-form/store-guest-shipping-form-dialog.component.css
@@ -5,14 +5,17 @@
  * https://opensource.org/licenses/MIT
  */
 
-.actions {
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: stretch;
+@media(min-width: 640px) {
+  .actions {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
 }
 
 @media(min-width: 641px) {
   .actions {
+    display: flex;
     flex-flow: row nowrap;
     align-items: center;
     justify-content: space-around;
