update a heading named after something else

--- a/src/app/store/components/checkout-request-form/store-checkout-request-form.component.html
+++ b/src/app/store/components/checkout-request-form/store-checkout-request-form.component.html
@@ -7,7 +7,7 @@
 
 <form [formGroup]="formGroup">
   <div class="billing">
-    <h3>Datos de Facturación</h3>
+    <h3>Tipo de Facturación</h3>
     <app-store-billing-details-form #billingForm formControlName="billing">
     </app-store-billing-details-form>
   </div>
