uncomment registering button from login dialog

--- a/src/app/store/dialogs/login-form/store-login-form-dialog.component.html
+++ b/src/app/store/dialogs/login-form/store-login-form-dialog.component.html
@@ -45,9 +45,9 @@
       </button>
     </div>
   </form>
-  <!-- <div class="other actions">
+  <div class="other actions">
     <app-dialog-switcher-button #registerButton
       label="¿No tienes una cuenta? Regístrate aquí">
     </app-dialog-switcher-button>
-  </div> -->
+  </div>
 </div>
