fix registration issues
fix form composition and validation
update api call payload

--- a/src/app/store/dialogs/registration-form/store-registration-form-dialog.component.html
+++ b/src/app/store/dialogs/registration-form/store-registration-form-dialog.component.html
@@ -22,7 +22,7 @@
       <input matInput placeholder="Repetir Clave" formControlName="pass2" type="password" />
     </mat-form-field>
 
-    <app-person-form #personForm>
+    <app-person-form formControlName="person">
     </app-person-form>
 
     <div class="actions">
