--- a/src/app/store/components/footer/store-footer.component.css
+++ b/src/app/store/components/footer/store-footer.component.css
@@ -6,8 +6,12 @@
  */
 
 :host {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0.5em 0;
+  display: grid;
+  gap: 0.5rem;
+  text-align: center;
+  padding: 1rem 0;
+}
+
+p {
+  margin: 0;
 }
