--- a/src/app/store/components/footer/store-footer.component.html
+++ b/src/app/store/components/footer/store-footer.component.html
@@ -5,4 +5,4 @@
   https://opensource.org/licenses/MIT
 -->
 
-<span>{{ footerText }}</span>
+<p *ngFor="let text of footerParagraphs">{{ text }}</p>
