--- a/src/app/shared/components/user-form/user-form.component.html
+++ b/src/app/shared/components/user-form/user-form.component.html
@@ -18,7 +18,7 @@
     <mat-select placeholder="Persona" formControlName="person">
       <mat-option *ngFor="let p of (people$ | async)"
         [value]="p.idNumber">
-        {{ p.name + " (" + p.idNumber + ")" }}
+        {{ p.firstName + " " + p.lastName + " (" + p.idNumber + ")" }}
       </mat-option>
     </mat-select>
   </mat-form-field>
