--- a/src/app/shared/components/person-form/person-form.component.html
+++ b/src/app/shared/components/person-form/person-form.component.html
@@ -7,8 +7,12 @@
 
 <form [formGroup]="formGroup">
 
-  <mat-form-field class="name">
-    <input matInput placeholder="Nombre Completo" formControlName="name" />
+  <mat-form-field class="firstName">
+    <input matInput placeholder="Nombre de pila" formControlName="firstName" />
+  </mat-form-field>
+
+  <mat-form-field class="lastName">
+    <input matInput placeholder="Appelido" formControlName="lastName" />
   </mat-form-field>
 
   <mat-form-field class="idNumber">
