refactor: Remove inconsistencies
This change fixes translations, sets seperate errors, and removes lastName incongruencies.

Fixes #90

--- a/src/app/shared/components/person-form/person-form.component.html
+++ b/src/app/shared/components/person-form/person-form.component.html
@@ -8,11 +8,11 @@
 <form [formGroup]="formGroup">
 
   <mat-form-field class="firstName">
-    <input matInput placeholder="Nombre de pila" formControlName="firstName" />
+    <input matInput placeholder="Nombres" formControlName="firstName" />
   </mat-form-field>
 
   <mat-form-field class="lastName">
-    <input matInput placeholder="Appelido" formControlName="lastName" />
+    <input matInput placeholder="Appelidos" formControlName="lastName" />
   </mat-form-field>
 
   <mat-form-field class="idNumber">
