--- a/src/app/store/routes/receipt/store-receipt.component.html
+++ b/src/app/store/routes/receipt/store-receipt.component.html
@@ -15,7 +15,7 @@
     <span>Aquí están los detalles:</span>
     <mat-list>
       <mat-list-item *ngFor="let detail of (details$ | async)">
-        {{ detail.units }} {{ detail.product.name }}
+        {{ detail.units }} {{ detail.product.name }} {{ detail.unitValue }}
       </mat-list-item>
     </mat-list>
   </mat-card>
