use new table component in receipt page

--- a/src/app/store/routes/receipt/store-receipt.component.html
+++ b/src/app/store/routes/receipt/store-receipt.component.html
@@ -13,10 +13,7 @@
     <h2 mat-card-title>¡Compra realizada con éxito!</h2>
     <span>Confirmada el {{ date$ | async }}.</span><br/>
     <span>Aquí están los detalles:</span>
-    <mat-list>
-      <mat-list-item *ngFor="let detail of (details$ | async)">
-        {{ detail.units }} {{ detail.product.name }} {{ detail.unitValue }}
-      </mat-list-item>
-    </mat-list>
+    <app-store-receipt-details-table [details]="details$ | async">
+    </app-store-receipt-details-table>
   </mat-card>
 </div>
